# derive_asref

./: Cargo.toml  README.md
src/: attrs.rs  lib.rs  structs.rs
tests/: impl_asref.rs
